--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "moment": "^2.29.1",
     "next": "12.0.7",
     "next-cookies": "^2.0.3",
+    "pm2": "^5.1.2",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-data-table-component": "^7.4.6",
